# readoutmodules

./: CMakeLists.txt
cmake/: readoutmodulesConfig.cmake.in
docs/: README.md
include/readoutmodules/: DataLinkHandlerBase.hpp  FakeCardReaderBase.hpp  ReadoutCreator.hpp  ReadoutModulesIssues.hpp
include/readoutmodules/detail/: DataLinkHandlerBase.hxx  FakeCardReaderBase.hxx
plugins/: CPUPinner.cpp  CPUPinner.hpp  DataLinkHandler.cpp  DataLinkHandler.hpp  DataRecorder.cpp  DataRecorder.hpp  DummyConsumer.cpp  DummyConsumer.hpp  ErroredFrameConsumer.cpp  FDDataLinkHandler.cpp  FDDataLinkHandler.hpp  FakeCardReader.cpp  FakeCardReader.hpp  FragmentConsumer.cpp  FragmentSender.cpp  FragmentSender.hpp  NDDataLinkHandler.cpp  NDDataLinkHandler.hpp  TimeSyncConsumer.cpp  cpupin_3RU_swtpg.json  fdReadoutCreator.cpp  ndReadoutCreator.cpp
python/readoutmodules/: app_confgen.py
schema/readoutmodules/: confgen.jsonnet  cpupinner.jsonnet  datalinkhandler.jsonnet  datarecorder.jsonnet  datarecorderinfo.jsonnet  dummyconsumerinfo.jsonnet  readoutconfig.jsonnet  readoutinfo.jsonnet  sourceemulatorconfig.jsonnet  sourceemulatorinfo.jsonnet
scripts/: readoutapp_gen
src/: CreateReadout.hpp  CreateSourceEmulator.hpp  ReadoutCreator.cpp
